--- a/CrmMVC.Web/Views/Project/Index.cshtml
+++ b/CrmMVC.Web/Views/Project/Index.cshtml
@@ -1,95 +1,185 @@
-﻿@model IEnumerable<CrmMVC.Application.ViewModels.Project.ListProjectVm>
+﻿@model CrmMVC.Application.ViewModels.Project.ListProjectVm
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "PROJEKTY";
 }
 
-<h1>Index</h1>
+<h1>PROJEKTY</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">+ Nowy projekt</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ShortNameSearchString)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FullNameSearchString)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CitySearchString)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.VoivodeshipSearchString)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.StatusSearchString)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TypeSearchString)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CurrentPage)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PageSize)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NumberOfPages)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Count)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ShortNameSearchString)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FullNameSearchString)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CitySearchString)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.VoivodeshipSearchString)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StatusSearchString)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TypeSearchString)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CurrentPage)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PageSize)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NumberOfPages)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Count)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
+<form asp-action="Index" asp-controller="Company" method="post">
+	<div class="container text-center">
+		<div class="row">
+			<div class="col">
+				<div class="input-group mb-3">
+					<span class="input-group-text" id="companyName">Nazwa</span>
+					@* <input type="text" class="form-control" aria-describedby="companyName" asp-for="CompanyNameSearchString" name="companyNameSearchString" id="companyNameSearchString"> *@
+				</div>
+			</div>
+			<div class="col">
+				<div class="input-group mb-3">
+					<span class="input-group-text" id="city">Miejscowość</span>
+					@* <input type="text" class="form-control" aria-describedby="city" asp-for="CitySearchString" name="citySearchString" id="citySearchString"> *@
+				</div>
+
+			</div>
+			<div class="row">
+				<div class="col">
+					<div class="input-group mb-3">
+						<label class="input-group-text" for="voivodeship">Województwo</label>
+@* 						<select class="form-select" asp-for="VoivodeshipSearchString" asp-items="@(new SelectList(Model.Voivodeships,"Name","Name"))" id="voivodeship">
+							<option></option>
+						</select> *@
+					</div>
+				</div>
+				<div class="col">
+					<div class="input-group mb-3">
+						<label class="input-group-text" for="type">Typ</label>
+@* 						<select class="form-select" asp-for="CompanyTypeSearchString" asp-items="@(new SelectList(Model.CompanyTypes,"Name","Name"))" id="type">
+							<option></option>
+						</select> *@
+					</div>
+				</div>
+				<div class="col">
+					<div class="input-group mb-3">
+						<label class="input-group-text" for="pageSize">Wyniki wyszukiwania</label>
+						<select class="form-select" asp-for="PageSize" id="pageSize">
+							<option value="5"> 5 </option>
+							<option value="10"> 10 </option>
+							<option value="15">15</option>
+							<option value="20">20</option>
+						</select>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="col mb-3">
+		<input type="submit" value="Wyszukaj" class="btn btn-dark" />
+	</div>
+	<div class="row">
+		<div class="col">
+			<table align="center">
+				<tr>
+					<td>
+						@if (Model.CurrentPage != 1)
+						{
+							<a href="javascript:PagerClick(1)">˂˂</a>
+							<span>|</span>
+							<a href="javascript:PagerClick(@Model.CurrentPage-1)">˂</a>
+							<span>|</span>
+						}
+						else
+						{
+							<span>˂˂</span>
+							<span>|</span>
+							<span>˂</span>
+							<span>|</span>
+						}
+					</td>
+					@for (int i = 1; i <= Math.Ceiling(Model.Count / (double)Model.PageSize); i++)
+					{
+						<td>
+							@if (i != Model.CurrentPage)
+							{
+								<a href="javascript:PagerClick(@i)">@i</a>
+							}
+							else
+							{
+								<span>@i</span>
+							} |
+						</td>
+						Model.NumberOfPages = i;
+
+					}
+					<td>
+						@if (Model.CurrentPage != Model.NumberOfPages)
+						{
+							<a href="javascript:PagerClick(@Model.CurrentPage+1)">˃</a>
+							<span>|</span>
+							<a href="javascript:PagerClick(@Model.NumberOfPages)">˃˃</a>
+						}
+						else
+						{
+							<span>˃</span>
+							<span>|</span>
+							<span>˃˃</span>
+						}
+					</td>
+				</tr>
+			</table>
+			<input type="hidden" name="pageNumber" id="pageNumber" />
+		</div>
+	</div>
+	<div class="row">
+		<table class="table">
+			<thead>
+				<tr>
+					<th>
+						Id
+					</th>
+					<th>
+						Województwo
+					</th>
+					<th>
+						Miejscowość
+					</th>
+					<th>
+						Nazwa
+					</th>
+					<th>
+						Status
+					</th>
+					<th>
+						Typ
+					</th>
+					<th></th>
+				</tr>
+			</thead>
+			<tbody>
+				@foreach (var item in Model.Projects)
+				{
+					<tr>
+						<td>
+							@Html.DisplayFor(modelItem => item.Id)
+						</td>
+						<td>
+							@Html.DisplayFor(modelItem => item.Voivodeship)
+						</td>
+						<td>
+							@Html.DisplayFor(modelItem => item.City)
+						</td>
+						<td>
+							@Html.DisplayFor(modelItem => item.ShortName)
+						</td>
+						<td>
+							@Html.DisplayFor(modelItem => item.Status)
+						</td>
+						<td>
+							@Html.DisplayFor(modelItem => item.Type)
+						</td>
+						<td>
+							@Html.ActionLink("Edycja", "Edit", new { id = item.Id }) |
+							@Html.ActionLink("Szczegóły", "Details", new { id = item.Id }) |
+							@Html.ActionLink("Usuwanie", "Delete", new { id = item.Id })
+						</td>
+					</tr>
+				}
+			</tbody>
+		</table>
+	</div>
+</form>
+
+@section Scripts
+{
+	<script type="text/javascript">
+		function PagerClick(index) {
+			document.getElementById("pageNumber").value = index;
+			document.forms[0].submit();
+		}
+	</script>
+
 }
-    </tbody>
-</table>
